# AutoAgents-for-VL-simulation

./: .gitignore  APACHE_LICENSE  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MIT_LICENSE  README.md  lefthook.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: coverage.yml  docs.yml
crates/autoagents/: Cargo.toml
crates/autoagents/src/: lib.rs
crates/chat-server/: Cargo.toml
crates/chat-server/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  environment.rs  error.rs  lib.rs  protocol.rs  session.rs  tool.rs
crates/core/src/agent/: base.rs  error.rs  executor.rs  mod.rs  output.rs  result.rs  runnable.rs  runner.rs
crates/core/src/agent/prebuilt/: default.rs  react.rs  simple.rs
crates/core/src/agent/types/: mod.rs  react.rs  simple.rs
crates/core/src/agents/: basic_agent.rs  mod.rs
crates/core/src/memory/: chat_wrapper.rs  mod.rs  shared_memory.rs  sliding_window.rs
crates/core/src/runtime/: agent_runtime.rs  context.rs  manager.rs  message.rs  mod.rs  single_threaded.rs  single_threaded_agent_runtime.rs  transport.rs
crates/core/src/tool/: mod.rs
crates/core/src/tool/runtime/: mod.rs  wasm.rs
crates/derive/: Cargo.toml
crates/derive/src/: agent.rs  lib.rs
crates/derive/src/agent/: mod.rs  output.rs
crates/derive/src/tool/: attr.rs  field.rs  input.rs  json.rs  mod.rs
crates/liquid-edge/: Cargo.toml  README.md
crates/liquid-edge/src/: chat.rs  config.rs  error.rs  lib.rs  sampling.rs  templates.rs  tokenizer.rs  traits.rs  utils.rs
crates/liquid-edge/src/runtime/: mod.rs  onnx.rs
crates/llm/: Cargo.toml
crates/llm/src/: builder.rs  error.rs  lib.rs  llm.rs  secret_store.rs  tool.rs
crates/llm/src/backends/: anthropic.rs  azure_openai.rs  deepseek.rs  google.rs  groq.rs  liquid_edge.rs  mod.rs  ollama.rs  openai.rs  phind.rs  xai.rs
crates/llm/src/chat/: mod.rs
crates/llm/src/common/: README.md  mod.rs  openai_types.rs
crates/llm/src/completion/: mod.rs
crates/llm/src/embedding/: mod.rs
crates/llm/src/evaluator/: mod.rs  parallel.rs
crates/llm/src/memory/: chat_wrapper.rs
crates/llm/src/models/: mod.rs
crates/llm/src/net/: http_request.rs
crates/llm/src/providers/ollama/: api.rs  llm.rs  message.rs  mod.rs  model.rs
crates/llm/src/providers/openai/: api.rs  llm.rs  mod.rs  model.rs
crates/llm/src/utils/: mod.rs  url.rs
crates/llm/tests/: anthropic_tests.rs  azure_openai_tests.rs  google_tests.rs  liquid_edge_tests.rs  main.rs  ollama_tests.rs  openai_tests.rs  other_backends_tests.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: agent.rs  llm.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/core-concepts/: agents.md  architecture.md  memory.md
docs/src/examples/: basic-math.md  basic-weather.md
docs/src/getting-started/: first-agent.md  installation.md  quick-start.md
docs/src/llm-providers/: overview.md
examples/basic/: Cargo.toml  README.md
examples/basic/src/: agent.rs  chaining.rs  chat.rs  events.rs  liquid_edge.rs  main.rs  react.rs  simple.rs  single_threaded.rs  structured_output.rs  text_gen.rs  tool.rs
examples/basic/src/tools/: mod.rs  news.rs  summarize.rs  weather.rs
examples/chat-server/src/: main.rs
examples/coding_agent/: Cargo.toml  README.md
examples/coding_agent/src/: agent.rs  interactive.rs  main.rs  tools.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/providers/: Cargo.toml  README.md
examples/providers/src/: main.rs
examples/runtime/: Cargo.toml
examples/runtime/src/: main.rs
examples/wasm_runner/: Cargo.toml
examples/wasm_runner/src/: main.rs  wasm.rs
examples/wasm_tool/: Cargo.toml  README.md  build.rs
examples/wasm_tool/src/: lib.rs
examples/wasm_tool/wasm/: wasm_tool.wasm
lerobot/: training-smolvla.ipynb
