[workspace]
default-members = ["crates/core"]
members = ["crates/core", "crates/autoagents", "examples/*", "crates/llm", "crates/chat-server"]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Agent Framework for Building Autonomous Agents"
repository = "https://github.com/liquidos-ai/AutoAgents"
keywords = ["agents", "llm"]
categories = []

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.86"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
strum_macros = "0.27.1"
tokio-stream = "0.1.17"
thiserror = "2.0.11"
futures = "0.3.31"
