[workspace]
default-members = [
    "crates/autoagents",
    "crates/core",
    "crates/llm",
    "crates/derive",
]
members = [
    "crates/core",
    "crates/autoagents",
    "examples/*",
    "crates/llm",
    "crates/derive",
]

resolver = "2"

[workspace.package]
version = "0.2.0-alpha.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Agent Framework for Building Autonomous Agents"
repository = "https://github.com/liquidos-ai/AutoAgents"
keywords = ["agents", "llm"]
categories = []

[workspace.dependencies]
autoagents = { version = "0.2.0-alpha.0", path = "crates/autoagents" }
autoagents-llm = { version = "0.2.0-alpha.0", path = "crates/llm" }
autoagents-derive = { version = "0.2.0-alpha.0", path = "crates/derive" }
autoagents-core = { version = "0.2.0-alpha.0", path = "crates/core" }
syn = { version = "2.0.98", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
async-trait = "0.1.86"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
strum = { version = "0.27.1", features = ["derive", "strum_macros"] }
strum_macros = "0.27.1"
tokio-stream = "0.1.17"
thiserror = "2.0.11"
futures = "0.3.31"
proc-macro2 = "1.0.93"
quote = "1.0.38"
clap = { version = "4.5.31", features = ["derive"] }
ureq = { version = "3.0.8", features = ["json"] }
uuid = { version = "1.15.1", features = ["v4"] }
log = "0.4"
env_logger = { version = "0.11" }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
dirs = "6.0.0"
regex = "1.11.1"
glob = "0.3"
walkdir = "2.4"
ignore = "0.4"
