[package]
name = "autoagents"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
autoagents-core = { path = "../core" }
autoagents-llm = { path = "../llm" }
