[package]
name = "autoagents-chat-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
autoagents = { path = "../../crates/autoagents" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
actix-web = "4.9.0"
chrono = "0.4.40"
async-stream = "0.3.6"
bytes = "1.10.0"
