[package]
name = "autoagents-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
autoagents-derive = { path = "../../crates/derive" }
autoagents-llm = { path = "../../crates/llm" }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
futures = { workspace = true }
