[package]
name = "autoagents-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["full"]
full = [
    "openai",
    "anthropic",
    "ollama",
    "deepseek",
    "xai",
    "phind",
    "google",
    "groq",
    "azure_openai",
]
openai = []
anthropic = []
ollama = []
deepseek = []
xai = []
phind = []
google = []
groq = []
azure_openai = []
logging = ["dep:env_logger"]


[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
ureq = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true, optional = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
base64 = "0.22.1"
either = { version = "1.15.0", features = ["serde"] }
