[package]
name = "autoagents-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
full = [
    "openai",
    "anthropic",
    "ollama",
    "deepseek",
    "xai",
    "phind",
    "google",
    "groq",
    "azure_openai",
    "liquid_edge",
]
openai = []
anthropic = []
ollama = []
deepseek = []
xai = []
phind = []
google = []
groq = []
azure_openai = []
liquid_edge = ["dep:liquid-edge"]

[dependencies]
liquid-edge = { workspace = true, optional = true, features = ["default"] }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
ureq = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
base64 = "0.22.1"
either = { version = "1.15.0", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10.1"
