[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
autoagents = { path = "../../crates/autoagents" }
autoagents-derive = { path = "../../crates/derive" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
