[package]
name = "basic"
version = "0.2.0-alpha.0"
edition = "2021"
publish = false

[dependencies]
autoagents-derive = { path = "../../crates/derive" }
autoagents = { path = "../../crates/autoagents", features = [
    "full",
    "logging",
] }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
urlencoding = "2.1.3"
reqwest.workspace = true
ureq = { version = "3.0.8", features = ["json"] }
uuid = { workspace = true }
tokio-stream.workspace = true
colored = "3.0.0"
