[package]
name = "providers-example"
version = "0.1.0"
edition = "2021"

[dependencies]
autoagents = { path = "../../crates/autoagents" }
autoagents-llm = { path = "../../crates/llm" }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"