[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
autoagents = { path = "../../crates/autoagents" }
autoagents-derive = { path = "../../crates/derive" }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
urlencoding = "2.1.3"
reqwest.workspace = true
ureq = { version = "3.0.8", features = ["json"] }
